--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@arcblock/did-auth": "^1.18.126",
     "@arcblock/did-auth-storage-nedb": "^1.7.1",
     "@blocklet/sdk": "^1.16.28",
+    "@chakra-ui/react": "^2.8.2",
     "@ocap/client": "^1.18.126",
     "@ocap/mcrypto": "^1.18.126",
     "@ocap/wallet": "^1.18.126",
@@ -48,23 +49,31 @@
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "nedb": "^1.8.0",
+    "pouchdb": "^9.0.0"
   },
   "devDependencies": {
     "@arcblock/eslint-config": "^0.3.2",
     "@arcblock/eslint-config-ts": "^0.3.2",
     "@blocklet/js-sdk": "^1.16.28",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/dotenv-flow": "^3.3.3",
     "@types/express": "^4.17.21",
+    "@types/nedb": "^1.8.16",
     "@types/node": "^20.14.9",
+    "@types/pouchdb": "^6.4.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "bumpp": "^9.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.3.2",
     "import-sort-style-module": "^6.0.0",
     "lint-staged": "^15.2.7",
     "nodemon": "^3.1.4",
